Add referral codes on Maya and reorder the ranking of Time deposits

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>You can only deposit up to P49,700 and earn 6.5% p.a.</li>
+                        <li>You can only deposit up to P49,700 and earn 6.5% interest p.a.</li>
                         <li>Excess of P49,700 will not earn interest.</li>
                         <li>Maximum limit for the savings account is capped at P50,000.</li>
                         <li>Monthly interest crediting.</li><br>
@@ -96,7 +96,7 @@
 
 
 
-                    <!-- Row 10 -->
+                    <!-- Row 2 -->
                 <div class="banks-logo">
                     <img src="netbank-logo.png" alt="netbank logo">
                 </div>
@@ -110,14 +110,15 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The base/regular interest rate of Netbank Mobile is 4% p.a.</li><br>
-                        <p class="details-header">💰 Lemoneyd x Netbank Mobile 💰</p>
-                        <li>Earn 6% p.a. when you open an account, choose "Netbank Mobile/Tipid Hacks" as the branch and use our unique referral code "AAAH2292".</li>
-                        <li>Daily interest crediting.</li>
-                        <li>Promo runs until April 2024.</li><br>
+                        <li>The base/regular interest rate of Netbank Mobile is 4% p.a.</li>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292". 💰</p>
+                        <p class="details-header">Select "Netbank Mobile/Tipid Hacks" on the branch selection screen during the account opening.</p><br>
+
                         <p class="details-header">Key features:</p>
-                        <li>Free InstaPay and PESONet transfers.</li>
+                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Access to Bills payment and Mobile load services.</li>
+                        <li>Access the highest-interest Time Deposit product at 7.5% p.a. for 12 months.</li>
                         <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -137,10 +138,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Basic accounts earn 6% p.a. on savings up to P50,000.</li>
+                        <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
                         <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
+                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
                         <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
@@ -282,10 +284,12 @@
                     <ul>
                         <li>Earn 4.5% p.a. for savings up to P300,000.</li>
                         <li>Excess of P300,000 will earn 3% p.a.</li>
-                        <li>Daily interest crediting.</li>
-                        <li>Get P50 reward when you sign up using referral code "RB525039".<br>Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</li><br>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 Get P50 reward when you sign up using referral code "RB525039". 💰</p>
+                        <p class="details-header">Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
+                        <li>Enjoy up to 3 free weekly cash-ins when you link your BPI, Chinabank, UnionBank, and RCBC accounts with SeaBank.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Transfer funds from ShopeePay to SeaBank anytime for free.</li>
                         <li>Learn more <a href="https://www.seabank.ph/product/savings" target="_blank">here.</a></li>
@@ -338,6 +342,7 @@
                         <li>Create up to 5 goal accounts and earn 4% p.a. on each account for a duration of up to six (6) months.</li>
                         <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
                         <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K" to get exclusive rewards from Maya. 💰</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
                         <li>5x free InstaPay transfers per month.</li>
@@ -363,6 +368,7 @@
                     <ul>
                         <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
                         <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K" to get exclusive rewards from Maya. 💰</p><br>
                         <p class="details-header">Promo runs November 1, 2023 to January 31, 2024:</p>
                         <li>Get up to 6% p.a. with a total spend of P1,000.</li>
                         <li>Get up to 10% p.a. with a total spend of Php35,000.</li>
@@ -495,6 +501,7 @@
             <div id="savings-wordings">
                 <h3>High-Interest Digital Time Deposits</h3>
                 <p>Best for growing your savings.</p>
+                <p>(ranked based on the interest rates of 1-year time deposits.)</p>
             </div>
 
             <div id="banks-list">
@@ -516,7 +523,38 @@
                 </div>
 
 
-                    <!-- Row 1 -->
+
+                    <!-- Row 1 -->  
+                <div class="banks-logo">
+                    <img src="netbank-logo.png" alt="netbank logo">
+                </div>
+                <div class="banks-savings">Netbank Mobile TD</div>
+                <div class="banks-interest">
+                    <p class="interest">6% - 7.5%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6% p.a.</li>
+                        <li>12 months - 7.5% p.a.</li><br>
+                        <p class="details-header">💰 Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292". 💰</p>
+                        <p class="details-header">Select "Netbank Mobile/Tipid Hacks" on the branch selection screen during the account opening.</p><br>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
+                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
+                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+                    <!-- Row 2 -->
                 <div class="banks-logo">
                     <img src="ownbank.png" alt="ownbank logo">
                 </div>
@@ -545,34 +583,6 @@
                 </div>
 
     
-
-                    <!-- Row 2 -->  
-                <div class="banks-logo">
-                    <img src="netbank-logo.png" alt="netbank logo">
-                </div>
-                <div class="banks-savings">Netbank Mobile TD</div>
-                <div class="banks-interest">
-                    <p class="interest">6% - 7.5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <p class="details-header">Term and Interest rate:</p>
-                        <li>6 months - 6% p.a.</li>
-                        <li>12 months - 7.5% p.a.</li><br>
-                        <p class="details-header">Details:</p>
-                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
-                        <li>You can open up to maximum of 5 time deposit accounts.</li>
-                        <li>Interest payout will be at the maturity date.</li>
-                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
-                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
-                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
 
                     <!-- Row 3 -->  
                 <div class="banks-logo">
@@ -603,7 +613,7 @@
                 </div>
 
 
-                    <!-- Row 5 -->
+                    <!-- Row 4 -->
                 <div class="banks-logo">
                     <img src="uno-logo.png" alt="unobank bank logo">
                 </div>
@@ -631,7 +641,7 @@
                 </div>
 
 
-                    <!-- Row 4 -->
+                    <!-- Row 5 -->
                 <div class="banks-logo">
                     <img src="uno-logo.png" alt="unobank bank logo">
                 </div>
@@ -659,7 +669,40 @@
                 </div>
 
 
-                    <!-- Row 6 -->
+
+                    <!-- Row 6 -->  
+                <div class="banks-logo">
+                    <img src="maya-logo.png" alt="maya logo">
+                </div>
+                <div class="banks-savings">Maya TD plus</div>
+                <div class="banks-interest">
+                    <p class="interest">5.5% - 6%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>3 months - 5.5% p.a.</li>
+                        <li>6 months - 6% p.a.</li>
+                        <li>12 months - 5.75% p.a.</li><br>
+                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K" to get exclusive rewards from Maya. 💰</p><br>
+                        <p class="details-header">Details:</p>
+                        <li>Create up to 5 Time Deposit Plus accounts at a time with up to P1,000,000 balance each.</li>
+                        <li>Start with a base rate of 3.5% p.a. once you make an initial deposit (no minimum balance).</li>
+                        <li>Earn a booster rate of 2% - 2.5% p.a. monthly once you reach the target amount.</li>
+                        <li>Minimum of P5,000 target amount to earn booster rate.</li>
+                        <li>Each Time Deposit Plus has its own account number and is different from your Maya Savings or Personal Goal accounts. </li>
+                        <li>You can cancel your Time Deposit Plus account anytime, but subject to cancellation fees.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/time-deposit-plus/" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+
+                    <!-- Row 7 -->
                 <div class="banks-logo">
                     <img src="tonik-logo.png" alt="tonik bank logo">
                 </div>
@@ -686,36 +729,6 @@
                         <li>Learn more <a href="https://tonikbank.com/savings-cards/time-deposit" target="_blank">here.</a></li>
                     </ul>
                 </div>
-
-                    <!-- Row 7 -->  
-                <div class="banks-logo">
-                    <img src="maya-logo.png" alt="maya logo">
-                </div>
-                <div class="banks-savings">Maya TD plus</div>
-                <div class="banks-interest">
-                    <p class="interest">5.5% - 6%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <p class="details-header">Term and Interest rate:</p>
-                        <li>3 months - 5.5% p.a.</li>
-                        <li>6 months - 6% p.a.</li>
-                        <li>12 months - 5.75% p.a.</li><br>
-                        <p class="details-header">Details:</p>
-                        <li>Create up to 5 Time Deposit Plus accounts at a time with up to P1,000,000 balance each.</li>
-                        <li>Start with a base rate of 3.5% p.a. once you make an initial deposit (no minimum balance).</li>
-                        <li>Earn a booster rate of 2% - 2.5% p.a. monthly once you reach the target amount.</li>
-                        <li>Minimum of P5,000 target amount to earn booster rate.</li>
-                        <li>Each Time Deposit Plus has its own account number and is different from your Maya Savings or Personal Goal accounts. </li>
-                        <li>You can cancel your Time Deposit Plus account anytime, but subject to cancellation fees.</li>
-                        <li>Learn more <a href="https://www.mayabank.ph/time-deposit-plus/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
 
             </div>
             <div class="update">
