--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <div id="savings-wordings">
                 <h3>High-Interest Digital Time Deposits</h3>
                 <p>Best for growing your savings.</p>
-                <p>(ranked based on the interest rates of 1-year time deposits.)</p>
+                <p>(rank is based on the interest rate for a 1-year term)</p>
             </div>
 
             <div id="banks-list">
