Edit the color of lemoneyd id

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <li>Maximum limit for the savings account is capped at P50,000.</li>
                         <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
-                        <li>Access services like Bills payment, Insurance, Mobile load, Telemedicine, and Loan offers.</li>
+                        <li>Access Bills payment, Insurance, Mobile load, Telemedicine, and Loan offers.</li>
                         <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
                         <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
                     </ul>
