--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                         <p class="details-header">Key features:</p>
                         <li>Access Bills payment, Insurance, Mobile load, Telemedicine, and Loan offers.</li>
                         <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
+                        <li>InstaPay transfer is available with P8 fee while PESONet is not yet available on the app.</li>
+                        <li>Request Bank Statement by emailing customer support. They don't provide Bank Certificate.</li>
                         <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -113,13 +115,13 @@
                         <li>The regular interest rate of Netbank Mobile is 4% p.a.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 Lemoneyd x Netbank Mobile 💰</p>
-                        <p class="details-header">Get 6% interest p.a. and P10 reward when you sign up using our unique referral code AAAH2292 & select "Netbank Mobile/Tipid Hacks" as the branch.</p><br>
+                        <p class="details-header">Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292" & select "Netbank Mobile/Tipid Hacks" as the branch.</p><br>
 
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Access to Bills payment and Mobile load services.</li>
                         <li>Access the highest-interest Time Deposit product at 7.5% p.a. for 12 months.</li>
-                        <li>Request Bank statement and certificate by emailing customer support.</li>
+                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
                         <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -145,7 +147,7 @@
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access to Time Deposit products.</li>
+                        <li>Access to Time Deposit products including the highest-interest at 7.5% p.a. for 12 months.</li>
                         <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
                     </ul>
