update the key features description of Ownbank

--- a/index.html
+++ b/index.html
@@ -144,10 +144,14 @@
                         <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
                         <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
                         <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 Get P300,000 + P20,000 Trial Bonus Voucher, which you can use to deposit into your Own It savings 💰</p>
+                        <p class="details-header">Use referral code "EFMPKU" when you sign-up and upgrade your account to claim the vouchers.</p> 
+                        <p class="details-header">The interest earnings from these Trial Bonus Vouchers are yours and withdrawable.</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
                         <li>Access to Time Deposit products including the highest-interest at 7.5% p.a. for 12 months.</li>
+                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
                         <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
                     </ul>
