edit savings details

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>You can only deposit up to P49,700 and earn 6.5% interest p.a.</li>
+                        <li>You can only deposit up to P49,700 and earn 6.5% p.a.</li>
                         <li>Excess of P49,700 will not earn interest.</li>
                         <li>Maximum limit for the savings account is capped at P50,000.</li>
                         <li>Monthly interest crediting.</li><br>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The base/regular interest rate of GSave is 2.6% p.a.</li><br>
+                        <li>The regular interest rate of GSave is 2.6% p.a.</li><br>
                         <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
                         <li>The 5% p.a. promotional interest already includes the base rate of 2.6%.</li>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The base/regular interest rate of UpSave is 2.5% p.a.</li><br>
+                        <li>The regular interest rate of UpSave is 2.5% p.a.</li><br>
                         <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
                         <li>The 5% p.a. promotional interest already includes the base rate of 2.5%.</li>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).</li>
+                        <li>Create up to 5 separate Go Save accounts and earn 5% interest p.a. for each account(no limit).</li>
                         <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
