Add Maxsave TD of CIMB

--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Access to Bills payment and Mobile load services.</li>
-                        <li>Access the highest-interest Time Deposit product at 7.5% p.a. for 12 months.</li>
+                        <li>Access high-interest Time Deposits.</li>
                         <li>Request Bank Statement and Certificate by emailing customer support.</li>
                         <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
 
-                    <!-- Row 2 -->  
+                    <!-- Row 3 -->  
                 <div class="banks-logo">
                     <img src="ownbank.png" alt="ownbank logo">
                 </div>
@@ -150,7 +150,7 @@
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access to Time Deposit products including the highest-interest at 7.5% p.a. for 12 months.</li>
+                        <li>Access high-interest Time Deposits.</li>
                         <li>Request Bank Statement and Certificate by emailing customer support.</li>
                         <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
@@ -172,12 +172,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The regular interest rate of GSave is 2.6% p.a.</li><br>
-                        <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
+                        <li>The regular interest rate of GSave is 2.6% p.a.</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">💰 5% interest promo - runs from Feb. 1 to Feb. 29, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
-                        <li>The 5% p.a. promotional interest already includes the base rate of 2.6%.</li>
-                        <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
-                        <li>The base interest rate is credited at the first day of each month.</li>
+                        <li>The 5% p.a. promo interest already includes the regular rate of 2.6%.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the GCash and CIMB app.</li>
@@ -204,12 +203,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The regular interest rate of UpSave is 2.5% p.a.</li><br>
-                        <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
+                        <li>The regular interest rate of UpSave is 2.5% p.a.</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">💰 5% interest promo - runs from Feb. 1 to Feb. 29, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
-                        <li>The 5% p.a. promotional interest already includes the base rate of 2.5%.</li>
-                        <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
-                        <li>The base interest rate is credited at the first day of each month.</li>
+                        <li>The 5% p.a. promo interest already includes the regular rate of 2.5%.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the CIMB app.</li>
@@ -531,38 +529,7 @@
                 </div>
 
 
-
-                    <!-- Row 1 -->  
-                <div class="banks-logo">
-                    <img src="netbank-logo.png" alt="netbank logo">
-                </div>
-                <div class="banks-savings">Netbank Mobile TD</div>
-                <div class="banks-interest">
-                    <p class="interest">6% - 7.5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <p class="details-header">Term and Interest rate:</p>
-                        <li>6 months - 6% p.a.</li>
-                        <li>12 months - 7.5% p.a.</li><br>
-                        <p class="details-header">💰 Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292". 💰</p>
-                        <p class="details-header">Select "Netbank Mobile/Tipid Hacks" on the branch selection screen during the account opening.</p><br>
-                        <p class="details-header">Details:</p>
-                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
-                        <li>You can open up to maximum of 5 time deposit accounts.</li>
-                        <li>Interest payout will be at the maturity date.</li>
-                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
-                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
-                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-                    <!-- Row 2 -->
+                    <!-- Row 1 -->
                 <div class="banks-logo">
                     <img src="ownbank.png" alt="ownbank logo">
                 </div>
@@ -587,6 +554,67 @@
                         <li>Interest payout will be at the maturity date.</li>
                         <li>Partial early withdrawal is not supported at the moment.</li>
                         <li>Learn more <a href="https://www.ownbank.com/help-center/category/4/18" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+                        <!-- Row 2 -->  
+                <div class="banks-logo">
+                    <img src="cimb-logo.png" alt="cimb logo">
+                </div>
+                <div class="banks-savings">CIMB MaxSave</div>
+                <div class="banks-interest">
+                    <p class="interest">6.5% - 7.5%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6.5% p.a.</li>
+                        <li>12 months - 7% p.a.</li>
+                        <li>24 months - 7.5% p.a.</li><br>
+
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 deposit amount and P1,000,000 maximum limit.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li> Pre-termination or cancellation of your MaxSave Time Deposit account before the maturity date is allowed. However, fees and penalties shall apply if you cancel beyond the cooling-off period.</li>
+                        <li>Cooling-off period is two (2) calendar days from the opening date of your Maxsave Time Deposit account.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/maxsave.html" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+
+                    <!-- Row 3 -->  
+                <div class="banks-logo">
+                    <img src="netbank-logo.png" alt="netbank logo">
+                </div>
+                <div class="banks-savings">Netbank Mobile TD</div>
+                <div class="banks-interest">
+                    <p class="interest">6% - 7%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6% p.a.</li>
+                        <li>12 months - 7% p.a.</li><br>
+                        <p class="details-header">💰 Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292". 💰</p>
+                        <p class="details-header">Select "Netbank Mobile/Tipid Hacks" on the branch selection screen during the account opening.</p><br>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
+                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
+                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
