Update the Maya savings details

--- a/index.html
+++ b/index.html
@@ -345,14 +345,17 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Create up to 5 goal accounts and earn 4% p.a. on each account for a duration of up to six (6) months.</li>
+                        <li>Create up to 5 goal accounts and earn 4% p.a. on each account.</li>
                         <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
                         <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K" to get exclusive rewards from Maya. 💰</p><br>
+                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K". Verify your account and spend at least P20 to get exclusive reward from Maya 💰</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
-                        <li>5x free InstaPay transfers per month.</li>
-                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
+                        <li>Personalize your goals by adding a goal name, goal amount, and due date.</li>
+                        <li>Set the duration of your goals for up to six (6) months.</li>
+                        <li>You can cancel your goal account anytime.</li>
+                        <li>Request and download Bank Certificate via the Maya app.</li>
+                        <li>Bank statements are sent to your registered email on the 1st of each month.</li>
                         <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
                     </ul>
                 </div>
