Update the Maya savings details

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </ul>
                 </div>
 
-                    <!-- Row 3 -->
+                    <!-- Row 10 -->
                 <div class="banks-logo">
                     <img src="maya-logo.png" alt="maya bank logo">
                 </div>
@@ -377,18 +377,15 @@
                     <ul>
                         <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
                         <li>Daily interest crediting.</li><br>
-                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K" to get exclusive rewards from Maya. 💰</p><br>
-                        <p class="details-header">Promo runs November 1, 2023 to January 31, 2024:</p>
-                        <li>Get up to 6% p.a. with a total spend of P1,000.</li>
-                        <li>Get up to 10% p.a. with a total spend of Php35,000.</li>
-                        <li>Get a bonus +1% p.a. when you refer a friend.</li>
-                        <li>Get an extra +1% p.a. if you're a Smart Postpaid subscriber.</li>
-                        <li>New users will have +8.5% p.a. with a total spend of Php500 on their first month on Maya Savings.</li>
+                        <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K". Verify your account and spend at least P20 to get exclusive reward from Maya 💰</p><br>
+                        <p class="details-header">💰 Earn up to 14% interest p.a. promo - until Feb. 29, 2024 💰</p>
+                        <li>Open Maya Savings account and boost your interest rate to up to 14% p.a. by making payments with Maya.</li>
                         <li>All bonus interest rates only applies to max balance of up to Php100,000.</li>
-                        <li>Learn more <a href="https://www.maya.ph/deals/savings/boost-your-interest-up-to-14-pa-when-you-pay-with-maya-2023-november" target="_blank">here.</a></li><br>
+                        <li>Learn more <a href="https://www.maya.ph/deals/aonline-purchase/get-2-pa-intereston-your-maya-savings-when-you-switch-to-maya-2023-september" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
-                        <li>5x free InstaPay transfers per month.</li>
+                        <li>Request and download Bank Certificate via the Maya app.</li>
+                        <li>Bank statements are sent to your registered email on the 1st of each month.</li>
                         <li>Physical and Virtual Debit Card available via the Maya app.</li>
                         <li>Learn more <a href="https://www.mayabank.ph/" target="_blank">here.</a></li>
                     </ul>
